Fixed spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,7 @@ h3 {
     position:absolute;
     border:0;
     background: #315795;
-    margin: 5px auto;
+    margin: 5px;
     padding-top: 0.4em;
     text-align:center;
     font-weight: bold;
